# Convolution

./: .gitignore  CMakeLists.txt  main.cpp  readme.txt  script_convolution.sh  setup.py  test.py
Docs/: command_line_arguments.txt  data-file-format.txt  readme.cmd.txt  readme.txt  time_complexity_omp_single.txt  time_complexity_pthread_single.txt
python/: converter.cpp  p_extension.cpp
python/include/: converter.h  p_extension.h
sample-data/: data_json.txt  data_json.txt_convoluted.txt  data_raw.txt  test1.txt
src/: binomial.h  cmd_args.cpp  cmd_args.h  convolution.cpp  convolution.h  convolution_one.cpp  data_reader.cpp  data_reader.h  data_writer.cpp  data_writer.h  main.cpp  printer.h  string_methods.cpp  string_methods.h  test1.cpp  utype.cpp  utype.h
src/args/: process.cpp  process.h
src/array/: array.cpp  array.h
src/convolution/: binomial.cpp  convolution.cpp  convolution.h
src/include/: convolution.h  data_reader.h  test.h
src/io/: data_reader.cpp  data_reader.h  data_writer.cpp  logger.cpp  logger.h
src/python/: p_extension.cpp  p_extension.h
src/tests/: test1.cpp  test1.h  test2.cpp  test2.h
test-python-api/: data_json.txt  plot.py
